<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/messagemain_cardview"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/text_size_12_sp">

        <LinearLayout
            android:id="@+id/CardView_12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/carvoew_1_images"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/text_size_20_sp"
                android:layout_marginLeft="@dimen/dimension_ten_dp"
                android:layout_marginTop="@dimen/text_size_20_sp"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:src="@mipmap/get_code_button" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/carvoew_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/dimension_five_dp"
                    android:text="@string/xiaoxi_t4" />

                <TextView
                    android:id="@+id/carvoew_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/text_size_20_sp"
                    android:text="@string/app_name"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/carvoew_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/carvoew_1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/xiaoxi_t3"

                    android:textColor="#e3e0e0" />


            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
